--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
+  color:rgba(18, 41, 71, 1);
   background-color: rgba(248, 248, 246, 1);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h3 {
+  font-size: 32px;
+  margin: 0;
 }
 
 a {
