--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     height: 100px;
-    padding: 0 43px;
+    padding: 0 77px;
 }
 
 .logo{
@@ -17,6 +17,8 @@
     display: flex;
     align-items: center;
     list-style: none;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .header_list__item:not(:last-child) {
