--- a/src/components/Home/PrevCard/PrevCard.module.css
+++ b/src/components/Home/PrevCard/PrevCard.module.css
@@ -1,4 +1,5 @@
 .prevCard__wrapper {
+    position: relative;
     min-height: 650px;
     margin-bottom: 160px;
     background-position: center;
@@ -9,17 +10,24 @@
 .container {
     display: flex;
     justify-content: space-between;
-    padding: 48px 74px 91px 74px;
+    padding: 48px 134px 91px 134px;
 }
 
 .block__info {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -10%;
+    margin-top: -10%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 
 .heading {
+    margin: 0;
     font-size: 58px;
     font-weight: 500;
 }
@@ -27,4 +35,10 @@
 .description {
     text-align: center;
     font-size: 18px;
+}
+
+@media screen and (max-width: 1150px) {
+    .block__info {
+        margin-left: -13%;
+    }
 }
