--- a/src/components/Home/PrevCard/PrevCardItem/PrevCardItem.module.css
+++ b/src/components/Home/PrevCard/PrevCardItem/PrevCardItem.module.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-weight: 500;
+    font-size: 16px;
 }
 .icon {
     width: 26px;
