--- a/src/components/common/ButtonCustom/ButtonCustom.module.css
+++ b/src/components/common/ButtonCustom/ButtonCustom.module.css
@@ -1,11 +1,11 @@
 .customButton {
     width: 141px;
     height: 41px;
+    font-size: 16px;
     border: 1px solid rgba(179, 186, 193, 1);
     border-radius: 2px;
     text-align: center;
     background-color: inherit;
-    font-weight: 500;
     cursor: pointer;
 }
 
