--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   font-weight: 500;
   color:rgba(18, 41, 71, 1);
   background-color: rgba(248, 248, 246, 1);
+  box-sizing: border-box;
 }
 
 code {
