--- a/src/components/Home/FullPage/SectionOffer/SectionOffer.module.css
+++ b/src/components/Home/FullPage/SectionOffer/SectionOffer.module.css
@@ -3,8 +3,6 @@
     display: grid;
     align-items: center;
     padding-left: 77px;
-    width: 100%;
-    overflow: hidden;
 }
 
 .description__block {
@@ -33,10 +31,25 @@
     width: 200px;
 }
 
-.img {
+.img__wrapper {
     position: absolute;
-    left: 650px;
+    left: 600px;
     height: 451px;
+    padding-right: 77px;
+    overflow: hidden;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width:1100px) {
+    .img__wrapper {
+        left: 550px;
+        padding-right: 0;
+    }
+
 }
 
 @media (max-width:768px) {
@@ -49,8 +62,9 @@
         padding-left: 40px;
     }
 
-    .img {
+    .img__wrapper {
         left: 490px;
+        padding-right: 40px;
         width: 398px;
         height: 403px;
     }
