--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@
   margin: 0;
   box-sizing: border-box;
   min-width: 320px;
+  background-color: rgba(248, 248, 246, 1);
 }
 
 .wrapper_homePage {
   display: block;
+  background-color: rgba(248, 248, 246, 1);
 }
