--- a/src/components/Home/FullPage/SectionBunner/SectionBunner.module.css
+++ b/src/components/Home/FullPage/SectionBunner/SectionBunner.module.css
@@ -14,6 +14,23 @@
     max-width: 280px;
 }
 
-.bunner__description {
-    font-size: 18px;
+
+@media (max-width: 900px) {
+    .banner__description__wrapper {
+        right: 10%;
+        
+    }
+    .section__banner {
+        min-height: 432px;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner__description__wrapper {
+        text-align: center;
+        top: 65%;
+        left: 50%;
+        translate: -50% -50%;
+        min-width: 253px;
+    }
 }
