--- a/src/components/Home/FullPage/SectionJoinUs/SectionJoinUs.module.css
+++ b/src/components/Home/FullPage/SectionJoinUs/SectionJoinUs.module.css
@@ -1,10 +1,9 @@
 .section__joinUs {
-    width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     align-items: center;
-    justify-content: space-between;
     padding: 0 77px;
-    
+
 }
 
 .cover__pictures {
@@ -24,20 +23,37 @@
     flex-shrink: 0.45;
 }
 
-@media (max-width:1250px) {
-    .cover__picture {
-        width: 177px;
-        height: 177px;
-    }
-
-}
-
-@media(max-width:900px) {
+@media (max-width:1200px) {
     .cover__pictures {
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     }
     .picture__for_desktop {
         display: none;
+    }
+}
+
+@media(max-width:900px) {
+
+    .section__joinUs {
+        padding: 0 45px;
+    }
+
+    .cover__picture {
+        max-width: 177px;
+    }
+
+}
+
+@media(max-width:768px) {
+    .section__joinUs {
+        padding: 0 15px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+       place-content: center;
+    }
+
+    .cover__picture {
+        max-width: 145px;
     }
 }
