--- a/src/components/Home/FullPage/SectionOffer/SectionOffer.module.css
+++ b/src/components/Home/FullPage/SectionOffer/SectionOffer.module.css
@@ -1,24 +1,26 @@
 .section__offer {
     position: relative;
     display: grid;
-    width: 100%;
     align-items: center;
     padding-left: 77px;
+    overflow: hidden;
 }
 
 .description__block {
     display: grid;
     align-items: center;
-    width: 670px;
+    max-width: 670px;
     min-height: 583px;
     padding-left: 76px;
     background-color: rgba(244, 241, 237, 1);
     box-sizing: border-box;
+
 }
 
 .description__content {
     display: grid;
     gap: 15px;
+    z-index: 1;
 }
 
 .about__offer {
@@ -34,10 +36,10 @@
 
 .img__wrapper {
     position: absolute;
+    width: 50%;
     left: 600px;
     height: 451px;
     padding-right: 77px;
-    overflow: hidden;
 }
 
 .img {
@@ -45,7 +47,11 @@
     height: 100%;
 }
 
-@media (max-width:1100px) {
+@media (max-width:900px) {
+    .section__offer {
+        padding-left: 45px;
+    }
+
     .img__wrapper {
         left: 550px;
         padding-right: 0;
@@ -55,18 +61,34 @@
 
 @media (max-width:768px) {
     .description__block {
-        min-height: 503px;
-        padding-left: 53px;
+        width: 100%;
+        padding: 0;
+        padding-top: 59px;
+        align-items: flex-start;
+        max-width: none;
     }
 
     .section__offer {
-        padding-left: 40px;
+        grid-template-rows: 2fr 1fr;
+        padding: 0 15px;
+    }
+
+    .description__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 0;
+    }
+
+    .second__paragraph {
+        display: none;
     }
 
     .img__wrapper {
-        left: 490px;
-        padding-right: 40px;
-        width: 398px;
-        height: 403px;
+        left: 10%;
+        width: 80%;
+        bottom: 0;
     }
+
 }
