--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   font-weight: 500;
-  color:rgba(18, 41, 71, 1);
-  background-color: rgba(248, 248, 246, 1);
+  color: rgba(18, 41, 71, 1);
+  background-color: rgb(216, 216, 216);
   box-sizing: border-box;
 }
 
@@ -23,7 +23,22 @@ h3 {
   margin: 0;
 }
 
+p {
+  font-size: 18px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
+}
+
+
+@media (max-width: 768px) {
+  h3 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 16px;
+  }
 }
