--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -36,6 +36,11 @@
     border-top: 1px solid rgba(209, 209, 209, 1);
 }
 
+.copirates__string {
+    display: flex;
+    align-items: end;
+}
+
 @media (max-width:900px) {
     .container {
         padding: 0 45px;
