--- a/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/BestSellerCard/BestSellerCard.module.css
+++ b/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/BestSellerCard/BestSellerCard.module.css
@@ -1,6 +1,6 @@
 .card__bestSeller_wrapper {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
 
