--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,7 @@
 .app__wrapper {
-  display: grid;
-  grid-template-rows: 100px 1fr 195px;
+  position: relative;
   margin: 0;
   box-sizing: border-box;
   min-width: 320px;
-  background-color: rgba(248, 248, 246, 1);
-}
-
-.wrapper_homePage {
-  display: block;
   background-color: rgba(248, 248, 246, 1);
 }
