--- a/src/components/Catalog/SortForm/FilterGroup/CheckboxInput/CheckboxInput.module.css
+++ b/src/components/Catalog/SortForm/FilterGroup/CheckboxInput/CheckboxInput.module.css
@@ -3,6 +3,15 @@
     align-items: center;
     caret-color: transparent;
     font-weight: 400;
+    cursor: pointer;
+}
+
+.input__wrapper:hover {
+    font-weight: bolder;
+}
+
+.input__wrapper:not(:last-child) {
+    margin-bottom: 20px;
 }
 
 .radio_button {
@@ -10,10 +19,12 @@
 }
 
 .input_not_selected {
+    cursor: pointer;
     color: rgba(154, 157, 160, 1);
 }
 
 .input_selected {
+    cursor: pointer;
     color: rgba(18, 41, 71, 1);
 }
 
