--- a/src/components/Catalog/SortForm/SortForm.module.css
+++ b/src/components/Catalog/SortForm/SortForm.module.css
@@ -1,8 +1,11 @@
 .filter__wrapper {
-    position: relative;
-    display: inline-block;
-    width: 100%;
     caret-color: transparent;
+    width: 100%;
+}
+
+.filter__button__toggle {
+    position: relative;
+    cursor: pointer;
 }
 
 .button__close {
@@ -14,33 +17,30 @@
 }
 
 .form {
-    right: 50px;
     position: absolute;
+    right: 0px;
     width: 100%;
-    padding: 0 20px;
-    display: flex;
+    display: grid;
+    grid-template-areas:
+        'group1 group2 group3'
+        'group1 group2 group3'
+        'group1 group2 buttons';
+    padding: 68px 20px 120px 68px;
     justify-content: space-around;
     z-index: 1;
-    padding-top: 30px;
     background-color: rgba(248, 248, 246, 1);
-
+    box-sizing: border-box;
 }
 
 .block__errors {
     position: absolute;
-    top:0;
+    left: 50%;
+    top: 0;
+    translate: -50%;
     color: red;
     font-weight: bold;
 }
 
-.checkboxGroup:not(:last-child) {
-    margin-right: 50px;
-}
-
-.checkboxGroup:last-child {
-    display: grid;
-    grid-template-rows: 2fr;
-}
 
 .filter__button__toggle {
     position: relative;
@@ -48,10 +48,58 @@
     justify-content: flex-end;
 }
 
+.group__one {
+    grid-area: group1;
+}
+
+.group__two {
+    grid-area: group2;
+}
+
+.group__three {
+    grid-area: group3;
+}
+
 .buttonGroup {
-    padding-top: 15px;
+    grid-area: buttons;
+    display: flex;
+    align-items: flex-end;
 }
 
 .buttonSubmit {
     margin-right: 20px;
+}
+
+.buttonSubmit:hover,
+.buttonReset:hover {
+    font-weight: bolder;
+    border: 2px solid rgba(18, 41, 71, 1);
+}
+
+
+@media (max-width:900px) {
+    .form {
+        grid-template-areas:
+            'group1 group2 group3'
+            'group1 group2 group3'
+            ' buttons   buttons buttons';
+        padding: 50px 45px 120px 45px;
+    }
+
+    .buttonGroup {
+        padding-top: 50px;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width:768px) {
+    .form {
+        display: block;
+        padding: 40px 15px 60px 15px;
+    }
+
+    .buttonGroup {
+        padding-top: 40px;
+    }
 }
