make a page switcher

--- a/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/BestSellerCard/BestSellerCard.module.css
+++ b/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/BestSellerCard/BestSellerCard.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    scroll-snap-align: start;
 }
 
 .card__bestSeller_wrapper:not(:last-child) {
