--- a/src/components/Catalog/Goods/Goods.module.css
+++ b/src/components/Catalog/Goods/Goods.module.css
@@ -2,11 +2,11 @@
     padding-top: 30px;
 }
 
-
-
 .block__goods {
     width: 100%;
-    min-height: 380px;
+    display: grid;
+    grid-template-columns: repeat(4, 24%);
+    gap: 29px;
 }
 
 .message__block {
@@ -19,10 +19,24 @@
 
 .block__buttons__control {
     display: flex;
+    padding-top: 40px;
 }
 
 .button {
     all: unset;
+    cursor: pointer;
+}
+
+.button:hover svg {
+    stroke-width: 2px;
+}
+
+.button:disabled:hover {
+    cursor: auto;
+}
+
+.button:disabled:hover svg {
+    stroke-width: 1px;
 }
 
 .page__info,
@@ -34,17 +48,44 @@
 }
 
 .line {
-    width: 58px;
-    height: 2px;
-    margin: 0 4px;
+    width: 50px;
+    height: 1.5px;
+    margin: 0 10px;
     background-color: rgba(18, 41, 71, 1);
 }
+
+.normal {
+    color: rgba(154, 157, 160, 1);
+}
+
 
 .button__arrow {
     stroke: rgba(18, 41, 71, 1);
     width: 45px;
     height: 12px;
-    cursor: pointer;
+    pointer-events: none;
 }
 
+@media(max-width:900px) {
+    .block__goods {
+        grid-template-columns: repeat(2, 48%);
+    }
+}
 
+@media(max-width:768px) {
+    .block__goods {
+        grid-template-columns: 1fr;
+    }
+
+    .block__buttons__control {
+        justify-content: space-between;
+    }
+
+    .page__info {
+        justify-content: flex-start;
+    }
+    
+    .line {
+        width: 30px;
+    }
+}
