--- a/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/SliderBestSellers.module.css
+++ b/src/components/Home/FullPage/SectionBestSellers/SliderBestsellers/SliderBestSellers.module.css
@@ -9,6 +9,7 @@
     transition-property: transform;
     transition-duration: 300ms;
     transition-timing-function: ease-in-out;
+    scroll-snap-type: y mandatory;
 }
 
 .block__bestsellers__control {
